# leitor-seral

./: CMakeLists.txt  FindPkgConfig.cmake  README.md  compilador.sh
libs/: libserial.so.1.0.0
src/: main.cpp  myserial.cpp  myserial.h
